<resources>
    <string name="app_name">Stack Exchange</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="reputation">Reputation:</string>
    <string name="search">Search</string>
    <string name="creation_date">Creation Date:</string>
    <string name="location">Location:</string>
    <string name="bronze">Bronze:</string>
    <string name="silver">Silver:</string>
    <string name="gold">Gold:</string>
    <string name="badges">Badges:</string>
    <string name="top_tags">Top Tags:</string>
</resources>